# social_network

./: .gitignore  Dockerfile  README.md  Social Network API collection.postman_collection.json  create_tables.sql  docker-compose.yaml  pyproject.toml
analytics/: after_index.md  before_index.md
src/: app.py
src/api/: routers.py
src/controllers/: password_controller.py
src/core/: db_connector.py
src/schemas/: models.py
src/users_create/: add_users_to_db.py  create_csv_users.py
tests/: test_load_search.py
