[project]
name = "social-network"
version = "0.1.0"
description = ""
authors = [
    {name = "AnnyRomanova",email = "anna.romanova0818@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "social_network", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
